--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,15 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>sk.lorman</groupId>
-    <artifactId>springboot</artifactId>
+    <artifactId>springcloud</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <modules>
-        <module>limit-service</module>
+        <module>limits-service</module>
+        <module>spring-cloud-config-server</module>
+        <module>currency-exchange-service</module>
+        <module>currency-conversion-service</module>
     </modules>
 
 </project>
