--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>currency-exchange-service</module>
         <module>currency-conversion-service</module>
         <module>netflix-eureka-naming-server</module>
+        <module>netflix-zuul-api-gateway</module>
     </modules>
 
 </project>
